--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/scalesim-project/scale-sim-v2.git
 [submodule "extern/network_backend/ns3-interface"]
 	path = extern/network_backend/ns3
-	url = https://github.com/astra-sim/astra-network-ns3.git
+	url = git@github.com:jitaogithub/deprecated-astra-network-ns3.git
